--- a/attendance-management-frontend/package.json
+++ b/attendance-management-frontend/package.json
@@ -10,6 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.7.1",
+    "axios": "^0.24.0",
+    "dotenv": "^10.0.0",
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^6.0.2",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
